# hix5hd2-omx-lib

./: Makefile  Makefile.am  Makefile.in  base.mak  cfg.mak  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: OMX_Video.h  OMX_VideoExt.h
omx_core/: Makefile  Makefile.am  Makefile.in  omx_core.c
omx_vdec/: Makefile  Makefile.am  Makefile.in  hi_common.h  hi_drv_video.h  hi_module.h  hisi_vdec.h  omx_allocator.c  omx_allocator.h  omx_codec_type.h  omx_event_queue.c  omx_vdec.c  omx_vdec.h  vdec_drv_ctx.c  vdec_drv_ctx.h  vfmw.h
