#### hix5hd2-mmz-lib library Makefile ####
AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = libOMX.hisi.video.decoder.la

### source list
libOMX_hisi_video_decoder_la_SOURCES = omx_allocator.c omx_event_queue.c omx_vdec.c vdec_drv_ctx.c
libOMX_hisi_video_decoder_la_LDFLAGS = -lpthread -lhi_mmz
AM_CFLAGS = -I../include

